<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>mineverse.Aust1n46.chat</groupId>
    <artifactId>VentureChat</artifactId>
    <version>3.7.1</version>
    <url>https://bitbucket.org/Aust1n46/venturechat/src/master</url>
    <scm>
        <url>https://bitbucket.org/Aust1n46/venturechat/src/master</url>
        <connection>scm:git:git@bitbucket.org/Aust1n46/venturechat.git</connection>
        <developerConnection>scm:git:git@bitbucket.org/Aust1n46/venturechat.git</developerConnection>
        <tag>HEAD</tag>
    </scm>
    <packaging>jar</packaging>
    <name>VentureChat</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <defaultGoal>clean package</defaultGoal>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
		    <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>3.5.0</version>
			    <dependencies>
				    <dependency>
					    <groupId>org.apache.maven.surefire</groupId>
					    <artifactId>surefire-junit4</artifactId>
					    <version>3.5.0</version>
				    </dependency>
			    </dependencies>
			    <configuration>
				    <includes>
					    <include>**/*.java</include>
				    </includes>
			    </configuration>
		    </plugin>
		    <plugin>
        		<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-shade-plugin</artifactId>
        		<version>3.6.0</version>
        		<configuration>
        			<relocations>
                		<relocation>
                  			<pattern>com.zaxxer.hikari</pattern>
                  			<shadedPattern>shaded.com.zaxxer.hikari</shadedPattern>
               			</relocation>
               			<relocation>
                  			<pattern>net.md_5.bungee.config</pattern>
                  			<shadedPattern>shaded.net.md_5.bungee.config</shadedPattern>
               			</relocation>
             		</relocations>
         			<artifactSet>
         				<includes>
         					<include>com.zaxxer:HikariCP</include>
         					<include>net.md-5:bungeecord-config</include>
         				</includes>
         			</artifactSet>
        		</configuration>
       			 <executions>
         			 <execution>
           				 <phase>package</phase>
            				<goals>
              					<goal>shade</goal>
            				</goals>
          			</execution>
        		</executions>
      		</plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>essentialsx-repo</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>
        <repository>
            <id>velocity</id>
            <url>https://repo.velocitypowered.com/snapshots/</url>
        </repository>
        <repository>
    		<id>papermc</id>
    		<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
    </repositories>
    <dependencies>
    	<dependency>
    		<groupId>io.papermc.paper</groupId>
    		<artifactId>paper-api</artifactId>
    		<version>1.20.4-R0.1-SNAPSHOT</version>
    		<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.9</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.2.0-SNAPSHOT</version>
        </dependency>
        <!--These are long depreciated. I would've removed them, but that is outside the scope of what I want to do here.
        I am using the latest builds of these plugins to be published to SpigotMC.-->
        <dependency>
            <groupId>com.massivecraft.factions</groupId>
            <artifactId>Factions</artifactId>
            <version>2.14.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/Factions.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.massivecraft.massivecore</groupId>
            <artifactId>MassiveCore</artifactId>
            <version>2.14.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/MassiveCore.jar</systemPath>
        </dependency>
        <!--Back to safety.-->
        <dependency>
	        <groupId>com.github.TownyAdvanced</groupId>
	        <artifactId>Towny</artifactId>
	        <version>0.96.7.0</version>
	        <scope>provided</scope>
	    </dependency>
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsXDiscord</artifactId>
            <version>2.19.0</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bstats</groupId>
                    <artifactId>bstats-bukkit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.dv8tion</groupId>
                    <artifactId>JDA</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
	        <groupId>com.velocitypowered</groupId>
	        <artifactId>velocity-api</artifactId>
	        <version>3.0.0-SNAPSHOT</version>
	        <scope>provided</scope>
	    </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-api</artifactId>
            <version>1.20-R0.1-SNAPSHOT</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.md-5</groupId>
            <artifactId>bungeecord-api</artifactId>
            <version>1.20-R0.1-SNAPSHOT</version>
            <type>javadoc</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
	        <groupId>junit</groupId>
	        <artifactId>junit</artifactId>
	        <version>4.12</version>
	        <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>3.12.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
